src/test/deca/context/invalid/created/testOpBool/orPasBool.deca
// Description :
//    Test invalide : Opération logique "et" sur des floats
//
// Résultats :
//    Erreur contextuelle
//    Ligne 11: Cannot perform operation on incompatible types (Not a boolean type). 

{
    float a = 1;
    float b = 2;
    boolean c = a && b;  // Opération logique "et" sur des floats non autorisée
}
